[workspace]
resolver = "3"
members = ["gh_proxy", "gh_proxy-ebpf", "gh_proxy-common"]
default-members = ["gh_proxy"]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
correctness = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }
unwrap_used = { level = "warn", priority = -1 }
expect_used = { level = "warn", priority = -1 }
similar_names = "allow"
missing_errors_doc = "allow"
missing_safety_doc = "allow"
missing_panics_doc = "allow"
cast_precision_loss = "allow"
struct_excessive_bools = "allow"

[workspace.dependencies]
# eBPF 相关
aya = { git = "https://github.com/aya-rs/aya" }
aya-build = { git = "https://github.com/aya-rs/aya" }
aya-ebpf = { git = "https://github.com/aya-rs/aya" }
aya-log = { git = "https://github.com/aya-rs/aya" }
aya-log-ebpf = { git = "https://github.com/aya-rs/aya" }

# 通用依赖
anyhow = "1"
clap = { version = "4.6", features = ["derive"] }
env_logger = "0.11"
log = "0.4"
tokio = { version = "1.52", features = ["full"] }

# Salvo 服务器
salvo = { version = "0.93.0", features = [
  "timeout",
  "concurrency-limiter",
  "http2-cleartext",
  "logging",
  "oapi",
  "rustls",
  "proxy",
] }

# 其他
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
mimalloc = { version = "0.1", features = ["v2", "no_thp", "override"] }
obfstr = "0.4"

[profile.release]
debug = 2
codegen-units = 1
strip = false
