[package]
name = "gh_proxy"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "gh_proxy"
path = "src/main.rs"

[[bin]]
name = "gh_proxy-server"
path = "src/server_bin.rs"

[lints]
workspace = true

[dependencies]
# eBPF 相关
aya = { git = "https://github.com/aya-rs/aya", features = ["async_tokio"] }
aya-log = { git = "https://github.com/aya-rs/aya" }
gh_proxy-common = { path = "../gh_proxy-common", features = ["user"] }

# 通用依赖
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.11"
log = "0.4"
tokio = { version = "1.40", features = ["full"] }

# Salvo 服务器
salvo = { version = "0.92.2", features = [
    "timeout",
    "concurrency-limiter",
    "http2-cleartext",
    "logging",
    "oapi",
    "rustls",
    "proxy",
] }

# 其他
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
mimalloc = { version = "0.1", features = ["v2", "no_thp", "override"] }
obfstr = "0.4"

[features]
default = ["user"]
user = []
